# Emtypyie.cli

./: .gitignore  .npmignore  README.md  TODO.md  cli.js  emtypyie-cli-native-windows-x64-2.5.0.zip.sha256  emtypyie-cli-windows-x64-2.1.0.zip.sha256  package-lock.json  package.json
.github/workflows/: release.yml  winget-first-submit.yml  winget.yml
archive/v2.5.2/Root4c/: CMakeLists.txt
archive/v2.5.2/Root4node/: cli.js
archive/v2.5.3/Root4node/: cli.js
archive/v2.5.5/Root4c/: CMakeLists.txt
archive/v2.5.5/Root4node/: cli.js  package-lock.json  package.json
archive/v2.5.6/Root4c/: CMakeLists.txt
archive/v2.5.6/Root4node/: cli.js  package-lock.json  package.json
archive/v2.5.7/Root4c/: CMakeLists.txt
archive/v2.5.7/Root4node/: cli.js  package.json
archive/v2.5.8/Root4c/: CMakeLists.txt
archive/v2.5.8/Root4node/: cli.js  package.json
archive/v3.0.0/Root4c/: CMakeLists.txt  startup_animation.json
choco/: emtypyie-cli.nuspec
choco/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
commands/: bakafetch.js  get.js  help.js  theme.js
gui/: index.html  server.js
mainsite/cli/: index.html
projects/: qrkraft.js
root4c/: CMakeLists.txt
root4c/src/: auth.c  bakafetch.c  download.c  fetch.c  fetch.h  larpino.cpp  main.c  project.c  project.h  runtime.c  shell.c  theme.c  util.c  util.h
root4node/: .npmignore  cli.js  emtypyie-cli-windows-x64-2.1.3.zip.sha256  emtypyie-cli-windows-x64-2.2.0.zip.sha256  package-lock.json  package.json
root4node/commands/: install-runtime.js  publish.js
(+53 files in other folders)
